// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Flag Available flags 1`] = `
.c4 {
  height: 12px;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  height: 24px;
  width: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        Sizes
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <div>
          s (12px)
        </div>
        <div>
          m (16px)
        </div>
        <div>
          l (24px)
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        au
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_198)"
          >
            <path
              d="M14 7A7 7 0 1 1 0 7c0 .002 7-7 7-7a7 7 0 0 1 7 7Z"
              fill="#2650BF"
            />
            <path
              d="M7 0H7 7ZM6.981 7H7v-.019A5.513 5.513 0 0 1 6.981 7ZM7 3.652V0h-.001A7 7 0 0 0 0 7h3.652V4.943L5.71 7H6.98L7 6.981V5.71L4.943 3.652H7Z"
              fill="#F5F5F5"
            />
            <path
              d="M3.541.913A7.033 7.033 0 0 0 .913 3.541V7h1.826V2.74H7V.912H3.541Z"
              fill="#CC3929"
            />
            <path
              d="M7 6.14 4.513 3.651h-.86L7 7v-.86Z"
              fill="#CC3929"
            />
            <path
              d="m4.222 8.217.384.804.867-.2-.388.8.698.554-.869.195.002.89-.694-.556-.695.557.003-.89-.87-.196.699-.554-.389-.8.868.2.384-.804ZM10.48 9.74l.192.4.434-.1-.194.401.349.277-.434.098v.445l-.347-.279-.347.279.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM8.693 5.478l.193.402.433-.1-.194.4.349.277-.434.098V7l-.347-.279L8.346 7l.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM10.48 3.043l.192.402.434-.1-.194.4.349.277-.434.098v.445l-.347-.278-.347.278.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM12.041 4.87l.192.401.434-.1-.194.4.349.277-.435.098.002.445-.348-.278-.347.278.001-.445-.434-.098.349-.276-.195-.401.434.1.192-.401ZM10.925 7l.151.465h.49l-.396.287.15.465-.395-.287-.395.287.15-.465-.395-.287h.49l.15-.465Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_198"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Australia
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_198)"
          >
            <path
              d="M14 7A7 7 0 1 1 0 7c0 .002 7-7 7-7a7 7 0 0 1 7 7Z"
              fill="#2650BF"
            />
            <path
              d="M7 0H7 7ZM6.981 7H7v-.019A5.513 5.513 0 0 1 6.981 7ZM7 3.652V0h-.001A7 7 0 0 0 0 7h3.652V4.943L5.71 7H6.98L7 6.981V5.71L4.943 3.652H7Z"
              fill="#F5F5F5"
            />
            <path
              d="M3.541.913A7.033 7.033 0 0 0 .913 3.541V7h1.826V2.74H7V.912H3.541Z"
              fill="#CC3929"
            />
            <path
              d="M7 6.14 4.513 3.651h-.86L7 7v-.86Z"
              fill="#CC3929"
            />
            <path
              d="m4.222 8.217.384.804.867-.2-.388.8.698.554-.869.195.002.89-.694-.556-.695.557.003-.89-.87-.196.699-.554-.389-.8.868.2.384-.804ZM10.48 9.74l.192.4.434-.1-.194.401.349.277-.434.098v.445l-.347-.279-.347.279.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM8.693 5.478l.193.402.433-.1-.194.4.349.277-.434.098V7l-.347-.279L8.346 7l.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM10.48 3.043l.192.402.434-.1-.194.4.349.277-.434.098v.445l-.347-.278-.347.278.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM12.041 4.87l.192.401.434-.1-.194.4.349.277-.435.098.002.445-.348-.278-.347.278.001-.445-.434-.098.349-.276-.195-.401.434.1.192-.401ZM10.925 7l.151.465h.49l-.396.287.15.465-.395-.287-.395.287.15-.465-.395-.287h.49l.15-.465Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_198"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Australia
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_198)"
          >
            <path
              d="M14 7A7 7 0 1 1 0 7c0 .002 7-7 7-7a7 7 0 0 1 7 7Z"
              fill="#2650BF"
            />
            <path
              d="M7 0H7 7ZM6.981 7H7v-.019A5.513 5.513 0 0 1 6.981 7ZM7 3.652V0h-.001A7 7 0 0 0 0 7h3.652V4.943L5.71 7H6.98L7 6.981V5.71L4.943 3.652H7Z"
              fill="#F5F5F5"
            />
            <path
              d="M3.541.913A7.033 7.033 0 0 0 .913 3.541V7h1.826V2.74H7V.912H3.541Z"
              fill="#CC3929"
            />
            <path
              d="M7 6.14 4.513 3.651h-.86L7 7v-.86Z"
              fill="#CC3929"
            />
            <path
              d="m4.222 8.217.384.804.867-.2-.388.8.698.554-.869.195.002.89-.694-.556-.695.557.003-.89-.87-.196.699-.554-.389-.8.868.2.384-.804ZM10.48 9.74l.192.4.434-.1-.194.401.349.277-.434.098v.445l-.347-.279-.347.279.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM8.693 5.478l.193.402.433-.1-.194.4.349.277-.434.098V7l-.347-.279L8.346 7l.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM10.48 3.043l.192.402.434-.1-.194.4.349.277-.434.098v.445l-.347-.278-.347.278.001-.445-.434-.098.349-.277-.194-.4.433.1.192-.402ZM12.041 4.87l.192.401.434-.1-.194.4.349.277-.435.098.002.445-.348-.278-.347.278.001-.445-.434-.098.349-.276-.195-.401.434.1.192-.401ZM10.925 7l.151.465h.49l-.396.287.15.465-.395-.287-.395.287.15-.465-.395-.287h.49l.15-.465Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_198"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Australia
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        ca
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_215)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-2.7752-1.6151-5.1732-3.9565-6.3054v12.6108C12.3849 12.1732 14 9.7752 14 7ZM0 7c0 2.7752 1.615 5.1732 3.9565 6.3054V.6946C1.6151 1.8268 0 4.2248 0 7ZM8.2174 7.913l1.2174-.6087L8.826 7v-.6087L7.6087 7l.6087-1.2174h-.6087L7 4.8696l-.6087.913h-.6087L6.3913 7l-1.2174-.6087V7l-.6087.3043 1.2174.6087-.3043.6087h1.2174v.913h.6086v-.913h1.2174l-.3043-.6087Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_215"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Canada
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_215)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-2.7752-1.6151-5.1732-3.9565-6.3054v12.6108C12.3849 12.1732 14 9.7752 14 7ZM0 7c0 2.7752 1.615 5.1732 3.9565 6.3054V.6946C1.6151 1.8268 0 4.2248 0 7ZM8.2174 7.913l1.2174-.6087L8.826 7v-.6087L7.6087 7l.6087-1.2174h-.6087L7 4.8696l-.6087.913h-.6087L6.3913 7l-1.2174-.6087V7l-.6087.3043 1.2174.6087-.3043.6087h1.2174v.913h.6086v-.913h1.2174l-.3043-.6087Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_215"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Canada
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_215)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-2.7752-1.6151-5.1732-3.9565-6.3054v12.6108C12.3849 12.1732 14 9.7752 14 7ZM0 7c0 2.7752 1.615 5.1732 3.9565 6.3054V.6946C1.6151 1.8268 0 4.2248 0 7ZM8.2174 7.913l1.2174-.6087L8.826 7v-.6087L7.6087 7l.6087-1.2174h-.6087L7 4.8696l-.6087.913h-.6087L6.3913 7l-1.2174-.6087V7l-.6087.3043 1.2174.6087-.3043.6087h1.2174v.913h.6086v-.913h1.2174l-.3043-.6087Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_215"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Canada
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        cn
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_222)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="m3.8309 4.2602.6043 1.8593h1.955L4.8098 7.2707l.6043 1.8594-1.5832-1.1485-1.5832 1.1485.607-1.8594-1.5832-1.1512h1.955l.6044-1.8593ZM8.2988 10.8418l-.462-.5687-.6837.2652.3965-.6152-.4621-.5715.7082.1886.3992-.6152.0383.7328.711.1887-.6864.2625.041.7328ZM9.2176 9.1738l.2187-.7-.5988-.4238.7328-.011.216-.7.2379.6946.7328-.0082-.5879.4375.2352.6945-.5988-.4238-.588.4402ZM10.4563 5.1379l-.3227.659.525.5113-.7246-.1039-.3227.6563-.1258-.722-.7273-.1038.6508-.3418-.1258-.7246.525.5113.6481-.3418ZM8.318 3.1418l-.0547.73.6808.2762-.7136.175-.052.7329-.3855-.6235-.7137.175.473-.5605-.3883-.6207.681.2761.473-.5605Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_222"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            China
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_222)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="m3.8309 4.2602.6043 1.8593h1.955L4.8098 7.2707l.6043 1.8594-1.5832-1.1485-1.5832 1.1485.607-1.8594-1.5832-1.1512h1.955l.6044-1.8593ZM8.2988 10.8418l-.462-.5687-.6837.2652.3965-.6152-.4621-.5715.7082.1886.3992-.6152.0383.7328.711.1887-.6864.2625.041.7328ZM9.2176 9.1738l.2187-.7-.5988-.4238.7328-.011.216-.7.2379.6946.7328-.0082-.5879.4375.2352.6945-.5988-.4238-.588.4402ZM10.4563 5.1379l-.3227.659.525.5113-.7246-.1039-.3227.6563-.1258-.722-.7273-.1038.6508-.3418-.1258-.7246.525.5113.6481-.3418ZM8.318 3.1418l-.0547.73.6808.2762-.7136.175-.052.7329-.3855-.6235-.7137.175.473-.5605-.3883-.6207.681.2761.473-.5605Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_222"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            China
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_222)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="m3.8309 4.2602.6043 1.8593h1.955L4.8098 7.2707l.6043 1.8594-1.5832-1.1485-1.5832 1.1485.607-1.8594-1.5832-1.1512h1.955l.6044-1.8593ZM8.2988 10.8418l-.462-.5687-.6837.2652.3965-.6152-.4621-.5715.7082.1886.3992-.6152.0383.7328.711.1887-.6864.2625.041.7328ZM9.2176 9.1738l.2187-.7-.5988-.4238.7328-.011.216-.7.2379.6946.7328-.0082-.5879.4375.2352.6945-.5988-.4238-.588.4402ZM10.4563 5.1379l-.3227.659.525.5113-.7246-.1039-.3227.6563-.1258-.722-.7273-.1038.6508-.3418-.1258-.7246.525.5113.6481-.3418ZM8.318 3.1418l-.0547.73.6808.2762-.7136.175-.052.7329-.3855-.6235-.7137.175.473-.5605-.3883-.6207.681.2761.473-.5605Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_222"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            China
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        de
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_294)"
          >
            <path
              d="M.4354 9.4348C1.4244 12.1003 3.9903 14 7 14c3.0098 0 5.5756-1.8997 6.5646-4.5652L7 8.826l-6.5646.6087Z"
              fill="#FFCF00"
            />
            <path
              d="M7 0C3.9903 0 1.4245 1.8996.4354 4.5652L7 5.174l6.5646-.6087C12.5756 1.8996 10.0098 0 7 0Z"
              fill="#000"
            />
            <path
              d="M.4354 4.5652A6.985 6.985 0 0 0 0 7c0 .8562.154 1.6765.4354 2.4348h13.1292A6.9842 6.9842 0 0 0 14 7c0-.8562-.154-1.6764-.4354-2.4348H.4354Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_294"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Germany
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_294)"
          >
            <path
              d="M.4354 9.4348C1.4244 12.1003 3.9903 14 7 14c3.0098 0 5.5756-1.8997 6.5646-4.5652L7 8.826l-6.5646.6087Z"
              fill="#FFCF00"
            />
            <path
              d="M7 0C3.9903 0 1.4245 1.8996.4354 4.5652L7 5.174l6.5646-.6087C12.5756 1.8996 10.0098 0 7 0Z"
              fill="#000"
            />
            <path
              d="M.4354 4.5652A6.985 6.985 0 0 0 0 7c0 .8562.154 1.6765.4354 2.4348h13.1292A6.9842 6.9842 0 0 0 14 7c0-.8562-.154-1.6764-.4354-2.4348H.4354Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_294"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Germany
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_294)"
          >
            <path
              d="M.4354 9.4348C1.4244 12.1003 3.9903 14 7 14c3.0098 0 5.5756-1.8997 6.5646-4.5652L7 8.826l-6.5646.6087Z"
              fill="#FFCF00"
            />
            <path
              d="M7 0C3.9903 0 1.4245 1.8996.4354 4.5652L7 5.174l6.5646-.6087C12.5756 1.8996 10.0098 0 7 0Z"
              fill="#000"
            />
            <path
              d="M.4354 4.5652A6.985 6.985 0 0 0 0 7c0 .8562.154 1.6765.4354 2.4348h13.1292A6.9842 6.9842 0 0 0 14 7c0-.8562-.154-1.6764-.4354-2.4348H.4354Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_294"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Germany
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        dk
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_149)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M5.4783 6.087h8.4625C13.4933 2.6524 10.5565 0 7 0a7.0247 7.0247 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.3542 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0593c.2948 2.2635 1.6708 4.1871 3.5929 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9408-6.087H5.4783Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_149"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Denmark
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_149)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M5.4783 6.087h8.4625C13.4933 2.6524 10.5565 0 7 0a7.0247 7.0247 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.3542 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0593c.2948 2.2635 1.6708 4.1871 3.5929 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9408-6.087H5.4783Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_149"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Denmark
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_149)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M5.4783 6.087h8.4625C13.4933 2.6524 10.5565 0 7 0a7.0247 7.0247 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.3542 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0593c.2948 2.2635 1.6708 4.1871 3.5929 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9408-6.087H5.4783Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_149"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Denmark
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        eu
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_282)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#2650BF"
            />
            <path
              d="m7 2.7391.2267.6976h.7334l-.5934.431.2267.6975L7 4.1342l-.5933.431.2266-.6975-.5933-.431h.7334l.2267-.6976ZM3.9871 3.9871l.6535.333.5186-.5186-.1148.7243.6535.333-.7243.1147-.1148.7244-.333-.6535-.7243.1148.5186-.5186-.333-.6535ZM2.7392 7l.6975-.2267V6.04l.431.5933.6976-.2266L4.134 7l.4312.5933-.6976-.2266-.431.5933v-.7333L2.7392 7ZM3.9871 10.0129l.333-.6535-.5186-.5186.7244.1148.3329-.6535.1148.7244.7243.1147-.6534.333.1147.7243-.5186-.5186-.6535.333ZM7 11.2609l-.2266-.6975H6.04l.5934-.4311-.2267-.6975.5934.431.5933-.431-.2267.6975.5934.4311h-.7334L7 11.2609ZM10.0129 10.0129l-.6534-.333-.5186.5186.1147-.7244-.6534-.3329.7243-.1147.1148-.7244.3329.6535.7243-.1148-.5185.5186.3329.6535ZM11.2609 7l-.6975.2267V7.96l-.4311-.5933-.6975.2266L9.866 7l-.431-.5933.6974.2266.4311-.5933v.7334L11.2609 7ZM10.0129 3.9871l-.333.6535.5187.5186-.7244-.1148-.333.6535-.1147-.7244-.7243-.1147.6534-.333-.1147-.7243.5186.5186.6534-.333Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_282"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            EU
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_282)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#2650BF"
            />
            <path
              d="m7 2.7391.2267.6976h.7334l-.5934.431.2267.6975L7 4.1342l-.5933.431.2266-.6975-.5933-.431h.7334l.2267-.6976ZM3.9871 3.9871l.6535.333.5186-.5186-.1148.7243.6535.333-.7243.1147-.1148.7244-.333-.6535-.7243.1148.5186-.5186-.333-.6535ZM2.7392 7l.6975-.2267V6.04l.431.5933.6976-.2266L4.134 7l.4312.5933-.6976-.2266-.431.5933v-.7333L2.7392 7ZM3.9871 10.0129l.333-.6535-.5186-.5186.7244.1148.3329-.6535.1148.7244.7243.1147-.6534.333.1147.7243-.5186-.5186-.6535.333ZM7 11.2609l-.2266-.6975H6.04l.5934-.4311-.2267-.6975.5934.431.5933-.431-.2267.6975.5934.4311h-.7334L7 11.2609ZM10.0129 10.0129l-.6534-.333-.5186.5186.1147-.7244-.6534-.3329.7243-.1147.1148-.7244.3329.6535.7243-.1148-.5185.5186.3329.6535ZM11.2609 7l-.6975.2267V7.96l-.4311-.5933-.6975.2266L9.866 7l-.431-.5933.6974.2266.4311-.5933v.7334L11.2609 7ZM10.0129 3.9871l-.333.6535.5187.5186-.7244-.1148-.333.6535-.1147-.7244-.7243-.1147.6534-.333-.1147-.7243.5186.5186.6534-.333Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_282"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            EU
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_282)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#2650BF"
            />
            <path
              d="m7 2.7391.2267.6976h.7334l-.5934.431.2267.6975L7 4.1342l-.5933.431.2266-.6975-.5933-.431h.7334l.2267-.6976ZM3.9871 3.9871l.6535.333.5186-.5186-.1148.7243.6535.333-.7243.1147-.1148.7244-.333-.6535-.7243.1148.5186-.5186-.333-.6535ZM2.7392 7l.6975-.2267V6.04l.431.5933.6976-.2266L4.134 7l.4312.5933-.6976-.2266-.431.5933v-.7333L2.7392 7ZM3.9871 10.0129l.333-.6535-.5186-.5186.7244.1148.3329-.6535.1148.7244.7243.1147-.6534.333.1147.7243-.5186-.5186-.6535.333ZM7 11.2609l-.2266-.6975H6.04l.5934-.4311-.2267-.6975.5934.431.5933-.431-.2267.6975.5934.4311h-.7334L7 11.2609ZM10.0129 10.0129l-.6534-.333-.5186.5186.1147-.7244-.6534-.3329.7243-.1147.1148-.7244.3329.6535.7243-.1148-.5185.5186.3329.6535ZM11.2609 7l-.6975.2267V7.96l-.4311-.5933-.6975.2266L9.866 7l-.431-.5933.6974.2266.4311-.5933v.7334L11.2609 7ZM10.0129 3.9871l-.333.6535.5187.5186-.7244-.1148-.333.6535-.1147-.7244-.7243-.1147.6534-.333-.1147-.7243.5186.5186.6534-.333Z"
              fill="#FFCF00"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_282"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            EU
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        fi
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_331)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_331"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Finland
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_331)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_331"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Finland
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_331)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_331"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Finland
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        fr
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_311)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-3.0097-1.8996-5.5755-4.5653-6.5646v13.1292C12.1004 12.5756 14 10.0098 14 7Z"
              fill="#CC3929"
            />
            <path
              d="M0 7c0 3.0098 1.8997 5.5756 4.5652 6.5646V.4354C1.8997 1.4244 0 3.9903 0 7Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_311"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            France
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_311)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-3.0097-1.8996-5.5755-4.5653-6.5646v13.1292C12.1004 12.5756 14 10.0098 14 7Z"
              fill="#CC3929"
            />
            <path
              d="M0 7c0 3.0098 1.8997 5.5756 4.5652 6.5646V.4354C1.8997 1.4244 0 3.9903 0 7Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_311"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            France
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_311)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M14 7c0-3.0097-1.8996-5.5755-4.5653-6.5646v13.1292C12.1004 12.5756 14 10.0098 14 7Z"
              fill="#CC3929"
            />
            <path
              d="M0 7c0 3.0098 1.8997 5.5756 4.5652 6.5646V.4354C1.8997 1.4244 0 3.9903 0 7Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_311"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            France
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        gb
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        hk
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_316)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="M7.7227 5.2956c-.1591.6617-.4418.5355-.5805 1.1126-.817-.1965-1.3203-1.0182-1.1239-1.8354.1964-.817 1.0182-1.3203 1.8353-1.1238-.2774 1.154.0114 1.2548-.131 1.8466ZM5.6024 5.786c.5801.3557.3728.5856.8787.8958-.4394.7165-1.3763.941-2.0928.5018-.7164-.4394-.941-1.3764-.5017-2.0928 1.0119.6205 1.1968.377 1.7158.6951ZM5.4135 7.954c.5176-.4417.6721-.1735 1.1235-.5588.5457.6392.4698 1.5998-.1694 2.1454-.6393.5457-1.5998.4697-2.1454-.1695.9028-.7706.7283-1.0219 1.1913-1.417ZM7.4171 8.8037c-.2603-.6288.0426-.6929-.1844-1.2412.7766-.3214 1.6667.0476 1.988.8241.3214.7766-.0476 1.6666-.8241 1.988-.4539-1.0967-.7467-1.0084-.9795-1.5709ZM8.8443 7.1607c-.6784.0532-.6459-.2547-1.2375-.2083-.0657-.8377.5603-1.5703 1.3982-1.636.8378-.0657 1.5703.5603 1.636 1.3982-1.1833.0927-1.1899.3985-1.7967.446Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_316"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Hong Kong
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_316)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="M7.7227 5.2956c-.1591.6617-.4418.5355-.5805 1.1126-.817-.1965-1.3203-1.0182-1.1239-1.8354.1964-.817 1.0182-1.3203 1.8353-1.1238-.2774 1.154.0114 1.2548-.131 1.8466ZM5.6024 5.786c.5801.3557.3728.5856.8787.8958-.4394.7165-1.3763.941-2.0928.5018-.7164-.4394-.941-1.3764-.5017-2.0928 1.0119.6205 1.1968.377 1.7158.6951ZM5.4135 7.954c.5176-.4417.6721-.1735 1.1235-.5588.5457.6392.4698 1.5998-.1694 2.1454-.6393.5457-1.5998.4697-2.1454-.1695.9028-.7706.7283-1.0219 1.1913-1.417ZM7.4171 8.8037c-.2603-.6288.0426-.6929-.1844-1.2412.7766-.3214 1.6667.0476 1.988.8241.3214.7766-.0476 1.6666-.8241 1.988-.4539-1.0967-.7467-1.0084-.9795-1.5709ZM8.8443 7.1607c-.6784.0532-.6459-.2547-1.2375-.2083-.0657-.8377.5603-1.5703 1.3982-1.636.8378-.0657 1.5703.5603 1.636 1.3982-1.1833.0927-1.1899.3985-1.7967.446Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_316"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Hong Kong
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_316)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#CC3929"
            />
            <path
              d="M7.7227 5.2956c-.1591.6617-.4418.5355-.5805 1.1126-.817-.1965-1.3203-1.0182-1.1239-1.8354.1964-.817 1.0182-1.3203 1.8353-1.1238-.2774 1.154.0114 1.2548-.131 1.8466ZM5.6024 5.786c.5801.3557.3728.5856.8787.8958-.4394.7165-1.3763.941-2.0928.5018-.7164-.4394-.941-1.3764-.5017-2.0928 1.0119.6205 1.1968.377 1.7158.6951ZM5.4135 7.954c.5176-.4417.6721-.1735 1.1235-.5588.5457.6392.4698 1.5998-.1694 2.1454-.6393.5457-1.5998.4697-2.1454-.1695.9028-.7706.7283-1.0219 1.1913-1.417ZM7.4171 8.8037c-.2603-.6288.0426-.6929-.1844-1.2412.7766-.3214 1.6667.0476 1.988.8241.3214.7766-.0476 1.6666-.8241 1.988-.4539-1.0967-.7467-1.0084-.9795-1.5709ZM8.8443 7.1607c-.6784.0532-.6459-.2547-1.2375-.2083-.0657-.8377.5603-1.5703 1.3982-1.636.8378-.0657 1.5703.5603 1.636 1.3982-1.1833.0927-1.1899.3985-1.7967.446Z"
              fill="#F5F5F5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_316"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Hong Kong
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        in
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1147_782)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M7 0C4.2248 0 1.8268 1.615.6946 3.9565h12.6108C12.1732 1.6151 9.7752 0 7 0Z"
              fill="#FF9811"
            />
            <path
              d="M7 14c2.7752 0 5.1732-1.6151 6.3054-3.9565H.6946C1.8268 12.3849 4.2248 14 7 14Z"
              fill="#41A21A"
            />
            <path
              clipRule="evenodd"
              d="M6.9957 9.4325c1.3458 0 2.4368-1.091 2.4368-2.4369 0-1.3458-1.091-2.4368-2.4368-2.4368-1.3459 0-2.437 1.091-2.437 2.4368 0 1.3459 1.0911 2.4369 2.437 2.4369Zm-.0642-.6574-.22-.905-.71.603c.2673.1802.5863.2898.93.302Zm-1.0337-.3775.354-.8615-.9292.0705c.115.3147.3162.588.5752.791Zm-.6148-.9129.7931-.489-.793-.4892a1.7815 1.7815 0 0 0-.068.4891c0 .1696.0236.3337.068.4891Zm.0396-1.1.9291.0704-.354-.8615a1.7847 1.7847 0 0 0-.575.791Zm.6789-.8665.71.6029.22-.905a1.7712 1.7712 0 0 0-.93.302ZM7.9898 8.473a1.7713 1.7713 0 0 1-.93.302l.22-.905.71.603Zm.1038-.0755c.2589-.203.4601-.4763.5751-.791l-.9291-.0705.354.8615Zm.6147-.9129a1.7816 1.7816 0 0 0 .068-.489c0-.1697-.0237-.3338-.068-.4892l-.793.4891.793.4891Zm-.0396-1.1a1.7848 1.7848 0 0 0-.5751-.791l-.354.8614.9291-.0704Zm-.6789-.8665-.71.6029-.22-.905c.3438.0122.6627.1218.93.302Z"
              fill="#2650BF"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1147_782"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            India
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1147_782)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M7 0C4.2248 0 1.8268 1.615.6946 3.9565h12.6108C12.1732 1.6151 9.7752 0 7 0Z"
              fill="#FF9811"
            />
            <path
              d="M7 14c2.7752 0 5.1732-1.6151 6.3054-3.9565H.6946C1.8268 12.3849 4.2248 14 7 14Z"
              fill="#41A21A"
            />
            <path
              clipRule="evenodd"
              d="M6.9957 9.4325c1.3458 0 2.4368-1.091 2.4368-2.4369 0-1.3458-1.091-2.4368-2.4368-2.4368-1.3459 0-2.437 1.091-2.437 2.4368 0 1.3459 1.0911 2.4369 2.437 2.4369Zm-.0642-.6574-.22-.905-.71.603c.2673.1802.5863.2898.93.302Zm-1.0337-.3775.354-.8615-.9292.0705c.115.3147.3162.588.5752.791Zm-.6148-.9129.7931-.489-.793-.4892a1.7815 1.7815 0 0 0-.068.4891c0 .1696.0236.3337.068.4891Zm.0396-1.1.9291.0704-.354-.8615a1.7847 1.7847 0 0 0-.575.791Zm.6789-.8665.71.6029.22-.905a1.7712 1.7712 0 0 0-.93.302ZM7.9898 8.473a1.7713 1.7713 0 0 1-.93.302l.22-.905.71.603Zm.1038-.0755c.2589-.203.4601-.4763.5751-.791l-.9291-.0705.354.8615Zm.6147-.9129a1.7816 1.7816 0 0 0 .068-.489c0-.1697-.0237-.3338-.068-.4892l-.793.4891.793.4891Zm-.0396-1.1a1.7848 1.7848 0 0 0-.5751-.791l-.354.8614.9291-.0704Zm-.6789-.8665-.71.6029-.22-.905c.3438.0122.6627.1218.93.302Z"
              fill="#2650BF"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1147_782"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            India
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1147_782)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M7 0C4.2248 0 1.8268 1.615.6946 3.9565h12.6108C12.1732 1.6151 9.7752 0 7 0Z"
              fill="#FF9811"
            />
            <path
              d="M7 14c2.7752 0 5.1732-1.6151 6.3054-3.9565H.6946C1.8268 12.3849 4.2248 14 7 14Z"
              fill="#41A21A"
            />
            <path
              clipRule="evenodd"
              d="M6.9957 9.4325c1.3458 0 2.4368-1.091 2.4368-2.4369 0-1.3458-1.091-2.4368-2.4368-2.4368-1.3459 0-2.437 1.091-2.437 2.4368 0 1.3459 1.0911 2.4369 2.437 2.4369Zm-.0642-.6574-.22-.905-.71.603c.2673.1802.5863.2898.93.302Zm-1.0337-.3775.354-.8615-.9292.0705c.115.3147.3162.588.5752.791Zm-.6148-.9129.7931-.489-.793-.4892a1.7815 1.7815 0 0 0-.068.4891c0 .1696.0236.3337.068.4891Zm.0396-1.1.9291.0704-.354-.8615a1.7847 1.7847 0 0 0-.575.791Zm.6789-.8665.71.6029.22-.905a1.7712 1.7712 0 0 0-.93.302ZM7.9898 8.473a1.7713 1.7713 0 0 1-.93.302l.22-.905.71.603Zm.1038-.0755c.2589-.203.4601-.4763.5751-.791l-.9291-.0705.354.8615Zm.6147-.9129a1.7816 1.7816 0 0 0 .068-.489c0-.1697-.0237-.3338-.068-.4892l-.793.4891.793.4891Zm-.0396-1.1a1.7848 1.7848 0 0 0-.5751-.791l-.354.8614.9291-.0704Zm-.6789-.8665-.71.6029-.22-.905c.3438.0122.6627.1218.93.302Z"
              fill="#2650BF"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1147_782"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            India
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        jp
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_299)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M7.00001 10.0435C8.68087 10.0435 10.0435 8.68086 10.0435 7C10.0435 5.31914 8.68087 3.95653 7.00001 3.95653C5.31915 3.95653 3.95654 5.31914 3.95654 7C3.95654 8.68086 5.31915 10.0435 7.00001 10.0435Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_299"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Japan
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_299)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M7.00001 10.0435C8.68087 10.0435 10.0435 8.68086 10.0435 7C10.0435 5.31914 8.68087 3.95653 7.00001 3.95653C5.31915 3.95653 3.95654 5.31914 3.95654 7C3.95654 8.68086 5.31915 10.0435 7.00001 10.0435Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_299"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Japan
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_299)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M7.00001 10.0435C8.68087 10.0435 10.0435 8.68086 10.0435 7C10.0435 5.31914 8.68087 3.95653 7.00001 3.95653C5.31915 3.95653 3.95654 5.31914 3.95654 7C3.95654 8.68086 5.31915 10.0435 7.00001 10.0435Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_299"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Japan
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        no
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_339)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M.241 8.8261c.4051 1.5028 1.2977 2.8053 2.498 3.7276V8.8261H.241ZM6.3912 13.9734C6.592 13.9906 6.7948 14 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739H6.3912v5.1473ZM13.7588 5.1739C12.9555 2.1935 10.2341 0 6.9999 0c-.2051 0-.408.0094-.6087.0266V5.174h7.3676ZM2.739 1.4464C1.5388 2.3687.6462 3.671.241 5.1738h2.498V1.4464Z"
              fill="#CC3929"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_339"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Norway
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_339)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M.241 8.8261c.4051 1.5028 1.2977 2.8053 2.498 3.7276V8.8261H.241ZM6.3912 13.9734C6.592 13.9906 6.7948 14 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739H6.3912v5.1473ZM13.7588 5.1739C12.9555 2.1935 10.2341 0 6.9999 0c-.2051 0-.408.0094-.6087.0266V5.174h7.3676ZM2.739 1.4464C1.5388 2.3687.6462 3.671.241 5.1738h2.498V1.4464Z"
              fill="#CC3929"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_339"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Norway
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_339)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M.241 8.8261c.4051 1.5028 1.2977 2.8053 2.498 3.7276V8.8261H.241ZM6.3912 13.9734C6.592 13.9906 6.7948 14 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739H6.3912v5.1473ZM13.7588 5.1739C12.9555 2.1935 10.2341 0 6.9999 0c-.2051 0-.408.0094-.6087.0266V5.174h7.3676ZM2.739 1.4464C1.5388 2.3687.6462 3.671.241 5.1738h2.498V1.4464Z"
              fill="#CC3929"
            />
            <path
              d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_339"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Norway
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        ru
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_325)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.5646 9.43477C13.846 8.67645 14 7.85624 14 7C14 6.14376 13.846 5.32356 13.5646 4.56523H0.435395C0.154027 5.32356 0 6.14376 0 7C0 7.85624 0.154027 8.67645 0.435395 9.43477L7 10.0435L13.5646 9.43477Z"
              fill="#2650BF"
            />
            <path
              d="M7.00003 14C10.0098 14 12.5756 12.1004 13.5646 9.43477H0.435425C1.42448 12.1004 3.99028 14 7.00003 14Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_325"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Russia
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_325)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.5646 9.43477C13.846 8.67645 14 7.85624 14 7C14 6.14376 13.846 5.32356 13.5646 4.56523H0.435395C0.154027 5.32356 0 6.14376 0 7C0 7.85624 0.154027 8.67645 0.435395 9.43477L7 10.0435L13.5646 9.43477Z"
              fill="#2650BF"
            />
            <path
              d="M7.00003 14C10.0098 14 12.5756 12.1004 13.5646 9.43477H0.435425C1.42448 12.1004 3.99028 14 7.00003 14Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_325"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Russia
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_325)"
          >
            <path
              d="M7 14C10.866 14 14 10.866 14 7C14 3.13401 10.866 0 7 0C3.13401 0 0 3.13401 0 7C0 10.866 3.13401 14 7 14Z"
              fill="#F5F5F5"
            />
            <path
              d="M13.5646 9.43477C13.846 8.67645 14 7.85624 14 7C14 6.14376 13.846 5.32356 13.5646 4.56523H0.435395C0.154027 5.32356 0 6.14376 0 7C0 7.85624 0.154027 8.67645 0.435395 9.43477L7 10.0435L13.5646 9.43477Z"
              fill="#2650BF"
            />
            <path
              d="M7.00003 14C10.0098 14 12.5756 12.1004 13.5646 9.43477H0.435425C1.42448 12.1004 3.99028 14 7.00003 14Z"
              fill="#CC3929"
            />
            <circle
              cx="7"
              cy="7"
              fill="none"
              r="6.5"
              stroke="#EBEBE8"
              strokeWidth="1"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_325"
            >
              <rect
                fill="white"
                height="14"
                width="14"
              />
            </clipPath>
          </defs>
          <title>
            Russia
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        se
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_410)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#FFCF00"
            />
            <path
              d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_410"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Sweden
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_410)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#FFCF00"
            />
            <path
              d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_410"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Sweden
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_410)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#FFCF00"
            />
            <path
              d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_410"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Sweden
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        uk
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_389)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M1.447 2.7382A6.9745 6.9745 0 0 0 .2411 5.174h3.6416L1.447 2.7383ZM13.7589 5.174a6.9753 6.9753 0 0 0-1.2059-2.4357l-2.4357 2.4356h3.6416ZM.2412 8.8261a6.9754 6.9754 0 0 0 1.2058 2.4357l2.4356-2.4357H.2412ZM11.2618 1.447A6.9752 6.9752 0 0 0 8.8261.2412v3.6416l2.4357-2.4356ZM2.7382 12.553a6.977 6.977 0 0 0 2.4357 1.2059v-3.6416L2.7383 12.553ZM5.1739.2412A6.9751 6.9751 0 0 0 2.7383 1.447l2.4356 2.4357V.2412ZM8.8261 13.7589a6.977 6.977 0 0 0 2.4357-1.2059l-2.4357-2.4357v3.6416ZM10.1173 8.8261l2.4357 2.4357a6.9752 6.9752 0 0 0 1.2059-2.4357h-3.6416Z"
              fill="#2650BF"
            />
            <path
              d="M13.9407 6.087H7.9131V.0593a7.0698 7.0698 0 0 0-1.8261 0v6.0276H.0593a7.0698 7.0698 0 0 0 0 1.8261h6.0276v6.0277a7.0532 7.0532 0 0 0 1.8261 0V7.9131h6.0277a7.0532 7.0532 0 0 0 0-1.8261Z"
              fill="#CC3929"
            />
            <path
              d="m8.8261 8.8261 3.1237 3.1237a7.0267 7.0267 0 0 0 .4114-.4494L9.6869 8.8261h-.8608ZM5.1739 8.8261l-3.1237 3.1236c.1436.1437.2938.2807.4494.4115L5.174 9.6869V8.826ZM5.1739 5.174v-.0001L2.0503 2.0502a7.0197 7.0197 0 0 0-.4115.4494L4.313 5.174h.8608ZM8.8261 5.174l3.1237-3.1237a7.0157 7.0157 0 0 0-.4494-.4115L8.8261 4.3131v.8609Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_389"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            Great Britain
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        us
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_417)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M6.6957 7H14a7.0087 7.0087 0 0 0-.2411-1.8261H6.6957v1.826ZM6.6957 3.3478h6.2769a7.0368 7.0368 0 0 0-1.6152-1.826H6.6957v1.826ZM7 14c1.6474 0 3.1616-.5694 4.3574-1.5217H2.6426C3.8384 13.4306 5.3526 14 7 14ZM1.0274 10.6521h11.9452a6.959 6.959 0 0 0 .7863-1.826H.2411a6.9574 6.9574 0 0 0 .7863 1.826Z"
              fill="#CC3929"
            />
            <path
              d="M3.2425 1.0932h.638l-.5934.431.2266.6975-.5933-.431-.5933.431.1957-.6025a7.0388 7.0388 0 0 0-1.3576 1.513h.2044l-.3777.2745a6.9852 6.9852 0 0 0-.1694.299l.1804.5552-.3365-.2445a6.9331 6.9331 0 0 0-.229.5434l.1988.6116h.7334l-.5934.431.2267.6976-.5934-.431-.3554.2582A7.0675 7.0675 0 0 0 0 7h7V0C5.6172 0 4.3281.4011 3.2425 1.0932ZM3.5137 6.3l-.5933-.431-.5933.431.2266-.6975-.5933-.431h.7334l.2266-.6976.2266.6975h.7334l-.5933.431.2266.6976Zm-.2266-2.7366.2266.6975-.5933-.4311-.5933.431.2266-.6974-.5933-.4311h.7334l.2266-.6975.2266.6975h.7334l-.5933.431ZM6.0246 6.3l-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6975h.7334l-.5934.431.2267.6976Zm-.2267-2.7366.2267.6975-.5933-.4311-.5934.431.2267-.6974-.5934-.4311h.7334l.2267-.6975.2266.6975h.7334l-.5934.431Zm0-2.0392.2267.6975-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6976h.7334l-.5934.431Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_417"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            United States of America
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_417)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M6.6957 7H14a7.0087 7.0087 0 0 0-.2411-1.8261H6.6957v1.826ZM6.6957 3.3478h6.2769a7.0368 7.0368 0 0 0-1.6152-1.826H6.6957v1.826ZM7 14c1.6474 0 3.1616-.5694 4.3574-1.5217H2.6426C3.8384 13.4306 5.3526 14 7 14ZM1.0274 10.6521h11.9452a6.959 6.959 0 0 0 .7863-1.826H.2411a6.9574 6.9574 0 0 0 .7863 1.826Z"
              fill="#CC3929"
            />
            <path
              d="M3.2425 1.0932h.638l-.5934.431.2266.6975-.5933-.431-.5933.431.1957-.6025a7.0388 7.0388 0 0 0-1.3576 1.513h.2044l-.3777.2745a6.9852 6.9852 0 0 0-.1694.299l.1804.5552-.3365-.2445a6.9331 6.9331 0 0 0-.229.5434l.1988.6116h.7334l-.5934.431.2267.6976-.5934-.431-.3554.2582A7.0675 7.0675 0 0 0 0 7h7V0C5.6172 0 4.3281.4011 3.2425 1.0932ZM3.5137 6.3l-.5933-.431-.5933.431.2266-.6975-.5933-.431h.7334l.2266-.6976.2266.6975h.7334l-.5933.431.2266.6976Zm-.2266-2.7366.2266.6975-.5933-.4311-.5933.431.2266-.6974-.5933-.4311h.7334l.2266-.6975.2266.6975h.7334l-.5933.431ZM6.0246 6.3l-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6975h.7334l-.5934.431.2267.6976Zm-.2267-2.7366.2267.6975-.5933-.4311-.5934.431.2267-.6974-.5934-.4311h.7334l.2267-.6975.2266.6975h.7334l-.5934.431Zm0-2.0392.2267.6975-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6976h.7334l-.5934.431Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_417"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            United States of America
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_417)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M6.6957 7H14a7.0087 7.0087 0 0 0-.2411-1.8261H6.6957v1.826ZM6.6957 3.3478h6.2769a7.0368 7.0368 0 0 0-1.6152-1.826H6.6957v1.826ZM7 14c1.6474 0 3.1616-.5694 4.3574-1.5217H2.6426C3.8384 13.4306 5.3526 14 7 14ZM1.0274 10.6521h11.9452a6.959 6.959 0 0 0 .7863-1.826H.2411a6.9574 6.9574 0 0 0 .7863 1.826Z"
              fill="#CC3929"
            />
            <path
              d="M3.2425 1.0932h.638l-.5934.431.2266.6975-.5933-.431-.5933.431.1957-.6025a7.0388 7.0388 0 0 0-1.3576 1.513h.2044l-.3777.2745a6.9852 6.9852 0 0 0-.1694.299l.1804.5552-.3365-.2445a6.9331 6.9331 0 0 0-.229.5434l.1988.6116h.7334l-.5934.431.2267.6976-.5934-.431-.3554.2582A7.0675 7.0675 0 0 0 0 7h7V0C5.6172 0 4.3281.4011 3.2425 1.0932ZM3.5137 6.3l-.5933-.431-.5933.431.2266-.6975-.5933-.431h.7334l.2266-.6976.2266.6975h.7334l-.5933.431.2266.6976Zm-.2266-2.7366.2266.6975-.5933-.4311-.5933.431.2266-.6974-.5933-.4311h.7334l.2266-.6975.2266.6975h.7334l-.5933.431ZM6.0246 6.3l-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6975h.7334l-.5934.431.2267.6976Zm-.2267-2.7366.2267.6975-.5933-.4311-.5934.431.2267-.6974-.5934-.4311h.7334l.2267-.6975.2266.6975h.7334l-.5934.431Zm0-2.0392.2267.6975-.5933-.431-.5934.431.2267-.6975-.5934-.431h.7334l.2267-.6976.2266.6976h.7334l-.5934.431Z"
              fill="#2650BF"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_417"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            United States of America
          </title>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        za
      </span>
    </div>
    <div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "space-evenly",
          }
        }
      >
        <svg
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_381)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M2.0502 11.9498c-2.7336-2.7337-2.7336-7.1659 0-9.8996C2.05 2.0505 6.087 7 6.087 7l-4.0368 4.9498Z"
              fill="#000"
            />
            <path
              d="M6.087 7 .9284 3.514a6.975 6.975 0 0 0-.4222.8686L3.1178 7 .5063 9.6176c.1211.3002.262.5902.4218.868L6.087 7Z"
              fill="#FFCF00"
            />
            <path
              d="M13.9407 6.087h-7.854L2.0503 2.0504c-.435.435-.813.9269-1.1218 1.4637L4.4076 7 .9281 10.4854a7.0273 7.0273 0 0 0 1.122 1.4641L6.0869 7.913h7.8539a7.053 7.053 0 0 0 0-1.826Z"
              fill="#41A21A"
            />
            <path
              d="M2.7382 12.5529A6.969 6.969 0 0 0 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739h-7.294L2.7382 12.553Z"
              fill="#2650BF"
            />
            <path
              d="M13.7589 5.1739C12.9556 2.1935 10.2342 0 7 0a6.969 6.969 0 0 0-4.2618 1.4471L6.4649 5.174h7.294Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_381"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            South Africa
          </title>
        </svg>
        <svg
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_381)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M2.0502 11.9498c-2.7336-2.7337-2.7336-7.1659 0-9.8996C2.05 2.0505 6.087 7 6.087 7l-4.0368 4.9498Z"
              fill="#000"
            />
            <path
              d="M6.087 7 .9284 3.514a6.975 6.975 0 0 0-.4222.8686L3.1178 7 .5063 9.6176c.1211.3002.262.5902.4218.868L6.087 7Z"
              fill="#FFCF00"
            />
            <path
              d="M13.9407 6.087h-7.854L2.0503 2.0504c-.435.435-.813.9269-1.1218 1.4637L4.4076 7 .9281 10.4854a7.0273 7.0273 0 0 0 1.122 1.4641L6.0869 7.913h7.8539a7.053 7.053 0 0 0 0-1.826Z"
              fill="#41A21A"
            />
            <path
              d="M2.7382 12.5529A6.969 6.969 0 0 0 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739h-7.294L2.7382 12.553Z"
              fill="#2650BF"
            />
            <path
              d="M13.7589 5.1739C12.9556 2.1935 10.2342 0 7 0a6.969 6.969 0 0 0-4.2618 1.4471L6.4649 5.174h7.294Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_381"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            South Africa
          </title>
        </svg>
        <svg
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 14 14"
        >
          <g
            clipPath="url(#clip0_1042_381)"
          >
            <path
              d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
              fill="#F5F5F5"
            />
            <path
              d="M2.0502 11.9498c-2.7336-2.7337-2.7336-7.1659 0-9.8996C2.05 2.0505 6.087 7 6.087 7l-4.0368 4.9498Z"
              fill="#000"
            />
            <path
              d="M6.087 7 .9284 3.514a6.975 6.975 0 0 0-.4222.8686L3.1178 7 .5063 9.6176c.1211.3002.262.5902.4218.868L6.087 7Z"
              fill="#FFCF00"
            />
            <path
              d="M13.9407 6.087h-7.854L2.0503 2.0504c-.435.435-.813.9269-1.1218 1.4637L4.4076 7 .9281 10.4854a7.0273 7.0273 0 0 0 1.122 1.4641L6.0869 7.913h7.8539a7.053 7.053 0 0 0 0-1.826Z"
              fill="#41A21A"
            />
            <path
              d="M2.7382 12.5529A6.969 6.969 0 0 0 7 14c3.2342 0 5.9556-2.1935 6.7589-5.1739h-7.294L2.7382 12.553Z"
              fill="#2650BF"
            />
            <path
              d="M13.7589 5.1739C12.9556 2.1935 10.2342 0 7 0a6.969 6.969 0 0 0-4.2618 1.4471L6.4649 5.174h7.294Z"
              fill="#CC3929"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1042_381"
            >
              <path
                d="M0 0h14v14H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
          <title>
            South Africa
          </title>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms / Flag Default use 1`] = `
.c0 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<svg
  className="c0"
  focusable="false"
  preserveAspectRatio="xMidYMid meet"
  role="img"
  viewBox="0 0 14 14"
>
  <g
    clipPath="url(#clip0_1042_410)"
  >
    <path
      d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
      fill="#FFCF00"
    />
    <path
      d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
      fill="#2650BF"
    />
  </g>
  <defs>
    <clipPath
      id="clip0_1042_410"
    >
      <path
        d="M0 0h14v14H0z"
        fill="#fff"
      />
    </clipPath>
  </defs>
  <title>
    Sweden
  </title>
</svg>
`;

exports[`Storyshots Atoms / Flag Inline 1`] = `
Array [
  "You can put the ",
  .c0 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  bottom: 1px;
}

<svg
    className="c0"
    focusable="false"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    viewBox="0 0 14 14"
  >
    <g
      clipPath="url(#clip0_1042_410)"
    >
      <path
        d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
        fill="#FFCF00"
      />
      <path
        d="M5.4783 6.087h8.4624C13.4933 2.6524 10.5565 0 7 0a7.0246 7.0246 0 0 0-1.5217.1664V6.087ZM3.6522 6.087V.851C1.73 1.9.354 3.8235.0592 6.087h3.593ZM3.6521 7.913H.0592c.2949 2.2635 1.6709 4.1871 3.593 5.2358V7.913ZM5.4783 7.913v5.9206c.49.1086.999.1664 1.5217.1664 3.5565 0 6.4933-2.6524 6.9407-6.087H5.4783Z"
        fill="#2650BF"
      />
    </g>
    <defs>
      <clipPath
        id="clip0_1042_410"
      >
        <path
          d="M0 0h14v14H0z"
          fill="#fff"
        />
      </clipPath>
    </defs>
    <title>
      Sweden
    </title>
  </svg>,
  " directly in the text with inline prop!",
]
`;

exports[`Storyshots Atoms / Flag Only Border On Light Mode 1`] = `
.c0 {
  padding: 16px;
  background-color: transparent;
}

.c1 {
  height: 16px;
  width: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

<div
  className="c0"
>
  <svg
    className="c1"
    focusable="false"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    viewBox="0 0 14 14"
  >
    <g
      clipPath="url(#clip0_1042_331)"
    >
      <path
        d="M7 14c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7Z"
        fill="#F5F5F5"
      />
      <path
        d="M13.9407 6.087H5.4783V.1664A6.9523 6.9523 0 0 0 3.6522.851V6.087H.0592a7.0603 7.0603 0 0 0 0 1.8261h3.593v5.2358a6.9506 6.9506 0 0 0 1.826.6848V7.9131h8.4625a7.054 7.054 0 0 0 0-1.8261Z"
        fill="#2650BF"
      />
      <circle
        cx="7"
        cy="7"
        fill="none"
        r="6.5"
        stroke="#EBEBE8"
        strokeWidth="1"
      />
    </g>
    <defs>
      <clipPath
        id="clip0_1042_331"
      >
        <path
          d="M0 0h14v14H0z"
          fill="#fff"
        />
      </clipPath>
    </defs>
    <title>
      Finland
    </title>
  </svg>
  <span
    className="Typography__Span-sc-10mju41-0 c2"
  >
    Notice flag does not have border on dark mode
  </span>
</div>
`;

exports[`Storyshots Atoms / Flag Renders nothing if wrong country code 1`] = `null`;
